[package]
name = "parking_lot"
version = "0.12.0"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
description = "More compact and efficient implementations of the standard synchronization primitives."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Amanieu/parking_lot"
readme = "README.md"
keywords = ["mutex", "condvar", "rwlock", "once", "thread"]
categories = ["concurrency"]
edition = "2018"

[dependencies]
parking_lot_core = { path = "core", version = "0.9.0" }
lock_api = { path = "lock_api", version = "0.4.6" }

[dev-dependencies]
rand = "0.8.3"

# Dependencies for benchmarking against other crates
criterion = "0.3.5"
seqlock = "0.1"
libc = "0.2"
num_cpus = "1.13.1"

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3", features = ["synchapi", "processthreadsapi"] }


# Used when testing out serde support.
bincode = "1.3.3"

[features]
default = ["criterion/html_reports"]
arc_lock = ["lock_api/arc_lock"]
owning_ref = ["lock_api/owning_ref"]
nightly = ["parking_lot_core/nightly", "lock_api/nightly", "criterion/real_blackbox"]
deadlock_detection = ["parking_lot_core/deadlock_detection"]
serde = ["lock_api/serde"]
send_guard = []
hardware-lock-elision = []
critical-bench = ["criterion/html_reports", "criterion/real_blackbox"]

[[bench]]
name = "mutex"
harness = false

[[bench]]
name = "rwlock"
harness = false

